<resources>
    <string name="app_name">GroceryList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="ingredient">ingredient</string>
    <string name="search">Search…</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
</resources>